// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConsultationPad Snapshot Tests should match snapshot during submission state 1`] = `
<div>
  <div
    data-hidden="false"
    data-testid="mock-action-area"
  >
    <div
      data-testid="action-area-title"
    >
      CONSULTATION_ACTION_NEW
    </div>
    <div
      data-testid="action-area-content"
    >
      <div
        data-testid="mock-encounter-details"
      >
        Encounter Details Form
      </div>
      <hr
        data-testid="mock-divider"
      />
      <div
        data-testid="mock-allergies-form"
      >
        Allergies Form
      </div>
      <hr
        data-testid="mock-divider"
      />
      <div
        data-testid="mock-investigations-form"
      >
        Investigations Form
      </div>
      <hr
        data-testid="mock-divider"
      />
      <div
        data-testid="mock-conditions-diagnoses"
      >
        Conditions and Diagnoses Form
      </div>
      <hr
        data-testid="mock-divider"
      />
      <div
        data-testid="mock-medications-form"
      >
        Medications Form
      </div>
      <hr
        data-testid="mock-divider"
      />
      <div
        data-testid="mock-observation-forms"
      >
        <div
          data-testid="observation-forms-content"
        >
          Observation Forms
        </div>
        <button
          data-testid="select-form-button"
        >
          Select Form
        </button>
        <div
          data-testid="selected-forms-count"
        >
          Selected: 
          0
        </div>
        <div
          data-testid="pinned-forms-count"
        >
          Pinned: 0
        </div>
      </div>
      <hr
        data-testid="mock-divider"
      />
    </div>
    <button
      data-testid="primary-button"
      disabled=""
    >
      Done
    </button>
    <button
      data-testid="secondary-button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`ConsultationPad Snapshot Tests should match snapshot for error state 1`] = `
<div>
  <div
    data-hidden="false"
    data-testid="mock-action-area"
  >
    <div
      data-testid="action-area-title"
    />
    <div
      data-testid="action-area-content"
    >
      <div
        class="emptyState cds--css-grid"
      >
        <div
          class="emptyStateTitle cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--xlg:col-span-16 cds--css-grid-column"
        >
          Something went wrong
        </div>
        <div
          class="emptyStateBody cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--xlg:col-span-16 cds--css-grid-column"
        >
          An error occurred while loading the consultation pad. Please try again later.
        </div>
      </div>
    </div>
    <button
      data-testid="primary-button"
    >
      Done
    </button>
    <button
      data-testid="secondary-button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`ConsultationPad Snapshot Tests should match snapshot for form order and dividers 1`] = `
<div>
  <div
    data-hidden="false"
    data-testid="mock-action-area"
  >
    <div
      data-testid="action-area-title"
    >
      CONSULTATION_ACTION_NEW
    </div>
    <div
      data-testid="action-area-content"
    >
      <div
        data-testid="mock-encounter-details"
      >
        Encounter Details Form
      </div>
      <hr
        data-testid="mock-divider"
      />
      <div
        data-testid="mock-allergies-form"
      >
        Allergies Form
      </div>
      <hr
        data-testid="mock-divider"
      />
      <div
        data-testid="mock-investigations-form"
      >
        Investigations Form
      </div>
      <hr
        data-testid="mock-divider"
      />
      <div
        data-testid="mock-conditions-diagnoses"
      >
        Conditions and Diagnoses Form
      </div>
      <hr
        data-testid="mock-divider"
      />
      <div
        data-testid="mock-medications-form"
      >
        Medications Form
      </div>
      <hr
        data-testid="mock-divider"
      />
      <div
        data-testid="mock-observation-forms"
      >
        <div
          data-testid="observation-forms-content"
        >
          Observation Forms
        </div>
        <button
          data-testid="select-form-button"
        >
          Select Form
        </button>
        <div
          data-testid="selected-forms-count"
        >
          Selected: 
          0
        </div>
        <div
          data-testid="pinned-forms-count"
        >
          Pinned: 0
        </div>
      </div>
      <hr
        data-testid="mock-divider"
      />
    </div>
    <button
      data-testid="primary-button"
    >
      Done
    </button>
    <button
      data-testid="secondary-button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`ConsultationPad Snapshot Tests should match snapshot with disabled Done button 1`] = `
<div>
  <div
    data-hidden="false"
    data-testid="mock-action-area"
  >
    <div
      data-testid="action-area-title"
    >
      CONSULTATION_ACTION_NEW
    </div>
    <div
      data-testid="action-area-content"
    >
      <div
        data-testid="mock-encounter-details"
      >
        Encounter Details Form
      </div>
      <hr
        data-testid="mock-divider"
      />
      <div
        data-testid="mock-allergies-form"
      >
        Allergies Form
      </div>
      <hr
        data-testid="mock-divider"
      />
      <div
        data-testid="mock-investigations-form"
      >
        Investigations Form
      </div>
      <hr
        data-testid="mock-divider"
      />
      <div
        data-testid="mock-conditions-diagnoses"
      >
        Conditions and Diagnoses Form
      </div>
      <hr
        data-testid="mock-divider"
      />
      <div
        data-testid="mock-medications-form"
      >
        Medications Form
      </div>
      <hr
        data-testid="mock-divider"
      />
      <div
        data-testid="mock-observation-forms"
      >
        <div
          data-testid="observation-forms-content"
        >
          Observation Forms
        </div>
        <button
          data-testid="select-form-button"
        >
          Select Form
        </button>
        <div
          data-testid="selected-forms-count"
        >
          Selected: 
          0
        </div>
        <div
          data-testid="pinned-forms-count"
        >
          Pinned: 0
        </div>
      </div>
      <hr
        data-testid="mock-divider"
      />
    </div>
    <button
      data-testid="primary-button"
      disabled=""
    >
      Done
    </button>
    <button
      data-testid="secondary-button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`ConsultationPad Snapshot Tests should verify correct order of forms and dividers in snapshot 1`] = `
<div
  data-testid="action-area-content"
>
  <div
    data-testid="mock-encounter-details"
  >
    Encounter Details Form
  </div>
  <hr
    data-testid="mock-divider"
  />
  <div
    data-testid="mock-allergies-form"
  >
    Allergies Form
  </div>
  <hr
    data-testid="mock-divider"
  />
  <div
    data-testid="mock-investigations-form"
  >
    Investigations Form
  </div>
  <hr
    data-testid="mock-divider"
  />
  <div
    data-testid="mock-conditions-diagnoses"
  >
    Conditions and Diagnoses Form
  </div>
  <hr
    data-testid="mock-divider"
  />
  <div
    data-testid="mock-medications-form"
  >
    Medications Form
  </div>
  <hr
    data-testid="mock-divider"
  />
  <div
    data-testid="mock-observation-forms"
  >
    <div
      data-testid="observation-forms-content"
    >
      Observation Forms
    </div>
    <button
      data-testid="select-form-button"
    >
      Select Form
    </button>
    <div
      data-testid="selected-forms-count"
    >
      Selected: 
      0
    </div>
    <div
      data-testid="pinned-forms-count"
    >
      Pinned: 0
    </div>
  </div>
  <hr
    data-testid="mock-divider"
  />
</div>
`;
